# dida_triangulate_shootout

./: CMakeLists.txt  README.md  countries_geojson.cpp  countries_geojson.hpp  triangulate_shootout.cpp  validation.cpp  validation.hpp
libtess2/: CMakeLists.txt  README.md  bucketalloc.c  bucketalloc.h  dict.c  dict.h  geom.c  geom.h  mesh.c  mesh.h  priorityq.c  priorityq.h  sweep.c  sweep.h  tess.c  tess.h  tesselator.h
mapbox/: README.md
poly2tri/: CMakeLists.txt
seidel/: CMakeLists.txt  construct.c  misc.c  monotone.c  tri.c  triangulate.h
